deploy/k8s_deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: onlineapp
  labels:
    name: onlineapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landingpage
  namespace: onlineapp
  labels:
    app: landingpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landingpage
  template:
    metadata:
      labels:
        app: landingpage
    spec:
      containers:
      - name: landingpage
        image: landingpage:v4
        imagePullPolicy: IfNotPresent 
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "4Gi"
            cpu: "30"
        # 时区挂载
        volumeMounts:
        - name: timezone
          mountPath: /etc/localtime
      volumes:
      - name: timezone
        hostPath:
          path: /usr/share/zoneinfo/Asia/Shanghai
      nodeSelector:
        kubernetes.io/hostname: homeserver

---
apiVersion: v1
kind: Service
metadata:
  name: landingpage
  namespace: onlineapp
spec:
  selector:
    app: landingpage
  ports:
  - appProtocol: http
    name: web-http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: landingpage
  namespace: onlineapp
spec:
  selector:
    app: landingpage
  ports:
  - appProtocol: http
    name: web-http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landingpage
  namespace: onlineapp
spec:
  ingressClassName: nginx
  rules:
  - host: demo.onemoresec.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landingpage
            port:
              number: 80
  tls:
  - secretName: onemoresec-com-tls
